--- a/css/common.css
+++ b/css/common.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
-@import url('/css/constants.css');
 
 *{
     margin: 0;
@@ -7,6 +6,12 @@
     box-sizing: border-box;
     text-decoration: none;
     font-family: 'Roboto', sans-serif;
+}
+
+:root{
+    --primary-color: #FFF;
+    --secondary-color: #F2F4F7;
+    --primary-text: #65686C;
 }
 
 body{
