--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,8 @@
-@import url(/css/common.css);
+:root{
+    --primary-color: #FFF;
+    --secondary-color: #F2F4F7;
+    --primary-text: #65686C;
+}
 
 main{
     margin: 0 auto;
